DBX2006/Dbxsrc/Common/Dbx32.h

//
//     String Lengths
//
#define DBX_MAX_NAME_LEN            100     //  Name variables                
#define DBX_MAX_TYPE_LEN            100     //  Type attributes
#define DBX_MAX_VALUE_LEN           100     //  Value attributes
#define DBX_MAX_TEXTITEM_LEN        256     //  Text Items
#define DBX_MAX_ATTRIBUTE_LEN       256     //  Attribute Values
#define DBX_MAX_FILENAME_LEN        256     //  Filenames
#define DBX_MAX_GRIDSPACING_LEN     256     //  Grid spacing
#define DBX_MAX_FORMULA_LEN         512     //  Formula, comment in TAttribute
//
//  Unit Definitions 
//
#define DBX_UNIT_DB                 0       // database units
#define DBX_UNIT_MIL                1       // mil
#define DBX_UNIT_MM                 2       // millimeter
#define DBX_UNIT_CM                 3       // centimeter
#define DBX_UNIT_INCH               4       // inch
#define DBX_UNIT_APP                5       //
#define DBX_UNIT_GLOBAL             6       // ie. Use gpDesign's current DBX_UNITs.
#define DBX_UNIT_LAYER              7       // String represents a layer name.
#define DBX_UNIT_VIASTYLE           8       // String represents a via style name.
#define DBX_UNIT_M                  9       // meter
#define DBX_UNIT_UM                 10      // micrometer
#define DBX_UNIT_NM                 11      // nanometer
#define DBX_UNIT_PM                 12      // picometer
#define DBX_UNIT_RAD                13      // radian
#define DBX_UNIT_DEG                14      // degree
#define DBX_UNIT_OHM                15      // ohms
#define DBX_UNIT_MHO                16      // conductance
#define DBX_UNIT_VOLT               17      // volts
#define DBX_UNIT_MVOLT              18      // millivolts
#define DBX_UNIT_UVOLT              19      // microvolts
#define DBX_UNIT_NVOLT              20      // nanovolts
#define DBX_UNIT_PVOLT              21      // picovolts
#define DBX_UNIT_AMP                22      // ampere
#define DBX_UNIT_MAMP               23      // milliamp
#define DBX_UNIT_UAMP               24      // microamp
#define DBX_UNIT_NAMP               25      // nanoamp
#define DBX_UNIT_PAMP               26      // picoamp
#define DBX_UNIT_HENRY              27      // Henry
#define DBX_UNIT_MHENRY             28      // millihenry
#define DBX_UNIT_UHENRY             29      // microhenry
#define DBX_UNIT_NHENRY             30      // nanohenry
#define DBX_UNIT_PHENRY             31      // picohenry
#define DBX_UNIT_FARAD              32      // Farad
#define DBX_UNIT_MFARAD             33      // millifarad
#define DBX_UNIT_UFARAD             34      // microfarad
#define DBX_UNIT_NFARAD             35      // nanofarad
#define DBX_UNIT_PFARAD             36      // picofarad
#define DBX_UNIT_SECOND             37      // second
#define DBX_UNIT_MSECOND            38      // millisecond
#define DBX_UNIT_USECOND            39      // microsecond
#define DBX_UNIT_NSECOND            40      // nanosecond
#define DBX_UNIT_PSECOND            41      // picosecond
#define DBX_UNIT_BOOL               42      // Boolean
#define DBX_UNIT_STRING             44      // string
#define DBX_UNIT_HERTZ              45      // hertz
#define DBX_UNIT_KHERTZ             46      // kilohertz
#define DBX_UNIT_MHERTZ             47      // megahertz
#define DBX_UNIT_WATT               48      // wattage
#define DBX_UNIT_MWATT              49      // milliwatt
#define DBX_UNIT_UWATT              50      // microwatt
#define DBX_UNIT_NWATT              51      // nanowatt
#define DBX_UNIT_PWATT              52      // picowatt
#define DBX_UNIT_GHERTZ             53      // gigahertz
#define DBX_UNIT_NO_UNIT            54      // a unit has not been defined for the constraint
//
//  Component graphic orientation assignments
//
#define DBX_COMP_GRAPHIC_ORIENT_TOP_0       0
#define DBX_COMP_GRAPHIC_ORIENT_TOP_90      1
#define DBX_COMP_GRAPHIC_ORIENT_TOP_180     2
#define DBX_COMP_GRAPHIC_ORIENT_TOP_270     3
#define DBX_COMP_GRAPHIC_ORIENT_BOTTOM_0    4
#define DBX_COMP_GRAPHIC_ORIENT_BOTTOM_90   5
#define DBX_COMP_GRAPHIC_ORIENT_BOTTOM_180  6
#define DBX_COMP_GRAPHIC_ORIENT_BOTTOM_270  7
//
//  Pcb design solder flow direction indicators
//
#define SOLDER_FLOW_TOP_TO_BOTTOM   0
#define SOLDER_FLOW_RIGHT_TO_LEFT   1
#define SOLDER_FLOW_BOTTOM_TO_TOP   2
#define SOLDER_FLOW_LEFT_TO_RIGHT   3
 DbxContext;
 TCoord;
 TBoundRect;
 TArc;
 TAttribute;
 TBus;
 TClassToClass;
 TComponent;
 TCompGraphic;
 TCompPin;
 TDesign;
 TField;
 TGrid;
 TLayer;
 TLine;
 TNet;
 TNetClass;
 TPad;
 TPadViaShape;
 TPadViaStyle;
 TPattern;
 TPin;
 TLayerStackup;