DBX2006/Dbxsrc/Common/dbx32.BAS


Global Const    DBX_UNIT_DB       =          0       ' database units
Global Const    DBX_UNIT_MIL      =          1       ' mil
Global Const    DBX_UNIT_MM       =          2       ' millimeter
Global Const    DBX_UNIT_CM       =          3       ' centimeter
Global Const    DBX_UNIT_INCH     =          4       ' inch
Global Const    DBX_UNIT_APP      =          5       '
Global Const    DBX_UNIT_GLOBAL   =          6       ' ie. Use gpDesign's current DBX_UNITs.
Global Const    DBX_UNIT_LAYER    =          7       ' String represents a layer name.
Global Const    DBX_UNIT_VIASTYLE =          8       ' String represents a via style name.
Global Const    DBX_UNIT_M        =          9       ' meter
Global Const    DBX_UNIT_UM       =          10      ' micrometer
Global Const    DBX_UNIT_NM       =          11      ' nanometer
Global Const    DBX_UNIT_PM       =          12      ' picometer
Global Const    DBX_UNIT_RAD      =          13      ' radian
Global Const    DBX_UNIT_DEG      =          14      ' degree
Global Const    DBX_UNIT_OHM      =          15      ' ohms
Global Const    DBX_UNIT_MHO      =          16      ' conductance
Global Const    DBX_UNIT_VOLT     =          17      ' volts
Global Const    DBX_UNIT_MVOLT    =          18      ' millivolts
Global Const    DBX_UNIT_UVOLT    =          19      ' microvolts
Global Const    DBX_UNIT_NVOLT    =          20      ' nanovolts
Global Const    DBX_UNIT_PVOLT    =          21      ' picovolts
Global Const    DBX_UNIT_AMP      =          22      ' ampere
Global Const    DBX_UNIT_MAMP     =          23      ' milliamp
Global Const    DBX_UNIT_UAMP     =          24      ' microamp
Global Const    DBX_UNIT_NAMP     =          25      ' nanoamp
Global Const    DBX_UNIT_PAMP     =          26      ' picoamp
Global Const    DBX_UNIT_HENRY    =          27      ' Henry
Global Const    DBX_UNIT_MHENRY   =          28      ' millihenry
Global Const    DBX_UNIT_UHENRY   =          29      ' microhenry
Global Const    DBX_UNIT_NHENRY   =          30      ' nanohenry
Global Const    DBX_UNIT_PHENRY   =          31      ' picohenry
Global Const    DBX_UNIT_FARAD    =          32      ' Farad
Global Const    DBX_UNIT_MFARAD   =          33      ' millifarad
Global Const    DBX_UNIT_UFARAD   =          34      ' microfarad
Global Const    DBX_UNIT_NFARAD   =          35      ' nanofarad
Global Const    DBX_UNIT_PFARAD   =          36      ' picofarad
Global Const    DBX_UNIT_SECOND   =          37      ' second
Global Const    DBX_UNIT_MSECOND  =          38      ' millisecond
Global Const    DBX_UNIT_USECOND  =          39      ' microsecond
Global Const    DBX_UNIT_NSECOND  =          40      ' nanosecond
Global Const    DBX_UNIT_PSECOND  =          41      ' picosecond
Global Const    DBX_UNIT_BOOL     =          42      ' Boolean
Global Const    DBX_UNIT_NUM      =          43      ' number (DBX_UNITless)
Global Const    DBX_UNIT_STRING   =          44      ' string
Global Const    DBX_UNIT_HERTZ    =          45      ' hertz
Global Const    DBX_UNIT_KHERTZ   =          46      ' kilohertz
Global Const    DBX_UNIT_MHERTZ   =          47      ' megahertz
Global Const    DBX_UNIT_WATT     =          48      ' wattage
Global Const    DBX_UNIT_MWATT    =          49      ' milliwatt
Global Const    DBX_UNIT_UWATT    =          50      ' microwatt
Global Const    DBX_UNIT_NWATT    =          51      ' nanowatt
Global Const    DBX_UNIT_PWATT    =          52      ' picowatt
Global Const    DBX_UNIT_GHERTZ   =          53      ' gigahertz
Global Const    DBX_UNIT_NO_UNIT  =          54      ' a unit has not been defined for the constraint


'  Component graphic orientation assignments

Global Const    DBX_COMP_GRAPHIC_ORIENT_TOP_0       = 0
Global Const    DBX_COMP_GRAPHIC_ORIENT_TOP_90      = 1
Global Const    DBX_COMP_GRAPHIC_ORIENT_TOP_180     = 2
Global Const    DBX_COMP_GRAPHIC_ORIENT_TOP_270     = 3
Global Const    DBX_COMP_GRAPHIC_ORIENT_BOTTOM_0    = 4
Global Const    DBX_COMP_GRAPHIC_ORIENT_BOTTOM_90   = 5
Global Const    DBX_COMP_GRAPHIC_ORIENT_BOTTOM_180  = 6
Global Const    DBX_COMP_GRAPHIC_ORIENT_BOTTOM_270  = 7


'  Pcb design solder flow direction indicators

Global Const    SOLDER_FLOW_TOP_TO_BOTTOM   = 0
Global Const    SOLDER_FLOW_RIGHT_TO_LEFT   = 1
Global Const    SOLDER_FLOW_BOTTOM_TO_TOP   = 2
Global Const    SOLDER_FLOW_LEFT_TO_RIGHT   = 3

' Conversation and Context Structure

Type DbxContext
   hConv As Long
   appInst As Long
   version As Long
   language As Long
   hWnd As Long             
   hMmf As Long
   pMmf As Long  ' placeholder for a C void pointer
End Type


' The following structures are the data structures for the extracted items,
' listed in alphabetical order


Type TCoord
    x As Long
    y As Long
End Type

Type TBoundRect
    lowerLeft As TCoord
    upperRight As TCoord
End Type

Type TArc
    itemId As Long
    width As Long
    radius As Long
    centerPt As TCoord
    startAng As Long
    sweepAng As Long
    boundRect As TBoundRect
    netId As Long
    layerId As Long
    isHighlighted As Long
    isFixed As Long
End Type

Type TAttribute
    itemId As Long
    name As String * DBX_MAX_TYPE_LEN
    value As String * DBX_MAX_ATTRIBUTE_LEN
    formula As String * DBX_MAX_FORMULA_LEN
    comment As String * DBX_MAX_TEXTITEM_LEN    
    typeLength As Long
    valueLength As Long
    formulaLength As Long
    commentLength As Long    
    textStyleId As Long
    justPoint As Long
    refPoint As TCoord
    boundRect As TBoundRect
    rotationAng As Long
    compId As Long        ' not used
    netId As Long         ' not used
    netClassId As Long    ' not used
    layerId As Long
    isFlipped As Long
    isHighlighted As Long
    isVisible As Long
    units As Long
End Type

Type TBus
    itemId        As Long
    startPt       As TCoord
    endPt         As TCoord
    layerId       As Long
    busName       As String * DBX_MAX_NAME_LEN
    isFlipped     As Long
    isHighlighted As Long
    isNameVisible As Long
End Type

Type TClassToClass
    netClassId1   As Long
    netClassId2   As Long
    netClassName1 As String * DBX_MAX_NAME_LEN
    netClassName2 As String * DBX_MAX_NAME_LEN
End Type    

Type TComponent
    compId As Long
    refDes As String * DBX_MAX_NAME_LEN
    compType As String * DBX_MAX_TYPE_LEN
    value As String * DBX_MAX_VALUE_LEN
    patternName As String * DBX_MAX_NAME_LEN
    libraryName As String * DBX_MAX_FILENAME_LEN
    refPoint As TCoord
    boundRect As TBoundRect
    rotationAng As Long
    numberPads As Long
    numberPins As Long
    numberParts As Long
    isAlpha As Long
    isFlipped As Long
    isHighlighted As Long
    isHetero As Long
    connectionType As Long
    isFixed As Long

    numberGraphics As Long
    currentGraphicName  As String * DBX_MAX_NAME_LEN
    defaultGraphicName As String * DBX_MAX_NAME_LEN
    isAutoSwapGraphic As Long
End Type

Type TCompGraphic
    graphicName As String * DBX_MAX_NAME_LEN
    numberPads As Long
    numberAttrs As Long
    numberItems As Long
End Type

Type TCompPin
    'itemId As Long
    compPinNumber As Long
    pinDes As String * DBX_MAX_NAME_LEN
    gateNumber As Long
    symPinNumber As Long
    padNumber As Long
    pinName As String * DBX_MAX_NAME_LEN
    gateEq As Long
    pinEq As Long
    electype As Long
End Type

Type TDesign
    designName As String * DBX_MAX_NAME_LEN
    title As String * DBX_MAX_NAME_LEN
    designer As String * DBX_MAX_NAME_LEN
    version As String * DBX_MAX_NAME_LEN
    lastModifiedDate As String * DBX_MAX_NAME_LEN
    lastModifiedTime As String * DBX_MAX_NAME_LEN
    drawingNumber As String * DBX_MAX_NAME_LEN
	guidString As String  *  DBX_MAX_NAME_LEN
    workSpaceSize As TCoord
    layerExtents As TBoundRect
    absGridId As Long
    relGridId As Long
    isGridAbsolute As Long
    userUnits As Long
    relGridOrigin As TCoord
    isModified As Long
    solderFlowDir As Long
End Type

Type TField
    itemId As Long
    textStyleId As Long
    text As String * DBX_MAX_TEXTITEM_LEN
    layerId As Long
    justPoint As Long
    refPoint As TCoord
    rotationAng As Long
    isFlipped As Long
    isHighlighted As Long
    isVisible As Long
    fieldKeyType As Long
End Type

Type TGrid
    gridId      As Long
    gridSpacing As String * DBX_MAX_GRIDSPACING_LEN
End Type
    
Type TLayer
    layerId As Long
    layerName As String * DBX_MAX_NAME_LEN
    layerType As Long
    layerBias As Long
    planeNetId As Long
    lineLineClearance As Long
    padLineClearance As Long
    padPadClearance As Long
    viaPadClearance As Long
    viaLineClearance As Long
    viaViaClearance As Long
    isEnabled As Long
    layerPosition As Long
End Type

Type TLayerStackup
    layerName As String * DBX_MAX_NAME_LEN
    layerMaterial As String * DBX_MAX_NAME_LEN
    layerThickness As String * DBX_MAX_NAME_LEN
    layerDialectricConstant As String * DBX_MAX_NAME_LEN
End Type

Type TLine
    itemId As Long
    lineType As Long
    width As Long
    startPt As TCoord
    endPt As TCoord
    boundRect As TBoundRect
    netId As Long
    layerId As Long
    isHighlighted As Long
    isFixed As Long
End Type

Type TNet
    netId As Long
    netName As String * DBX_MAX_NAME_LEN
    nodeCount As Long
    length As Long
    isPlane As Long
End Type

Type TNetClass
    netClassId   As Long
    netClassName As String * DBX_MAX_NAME_LEN
    numberOfNets As Long
End Type

Type TPad
    itemId As Long
    'padNumber As Long
    compRefDes As String * DBX_MAX_NAME_LEN
    padStyleId As Long                     ' Not Used for Free Pads
    center As TCoord
    layerId As Long
    isFlipped As Long
    rotationAng As Long
    isHighlighted As Long
    netId As Long
    boundRect As TBoundRect
    compPin As TCompPin
    defaultPinDes As String * DBX_MAX_NAME_LEN
    isFixed As Long
End Type

Type TPadViaShape
    layerId As Long
    layerType As Long
    styleType As Long                   ' Pad or Via Style
    shape As Long
    holeDia As Long
    width As Long                       ' Used for Normal Types
    height As Long                      ' Used for Normal Types
    outerDia As Long                    ' Used for Thermals
    innerDia As Long                    ' Used for Thermals
    spokeWidth As Long                  ' Used for Thermals
    isPourNoConn As Long                ' Prohibit Cu pour thermalizing
End Type

Type TPadViaStyle
    styleId As Long
    styleType As Long                   ' Pad or Via Style
    name As String * DBX_MAX_NAME_LEN
    holeDia As Long
    isHolePlated As Long
    xOffset As Long
    yOffset As Long
    holeStartLayer As Long
    holeEndLayer As Long
    drillSymbol As Long
End Type

Type TPattern
    itemId As Long
    patternName As String * DBX_MAX_NAME_LEN
    rotationAng As Long
    isFlipped As Long
    isHighlighted As Long
End Type

Type TPin
    itemId As Long
    'symPinNumber As Long
    compRefDes As String * DBX_MAX_NAME_LEN
    outsideStyle As Long
    outsideEdgeStyle As Long
    insideStyle As Long
    insideEdgeStyle As Long
    refPoint As TCoord
    layerId As Long
    isFlipped As Long
    isHighlighted As Long
    rotationAng As Long
    netId As Long
    boundRect As TBoundRect
    pinLength As Long
    compPin As TCompPin
    defaultPinDes As String * DBX_MAX_NAME_LEN
End Type
